--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ body {
   .cardPreviewImage {
     border-radius: 5px;
     width: 100%;
+    max-height: 270px;
   }
 
   .projectCardsContainer :hover {
