--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@ body {
 
   .cardPreviewImage {
     border-radius: 5px;
+    object-fit: contain;
     width: 100%;
-    max-height: 270px;
   }
 
   .projectCardsContainer :hover {
