--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ body {
   }
 
   .cardPreviewImage {
-    border-radius: 5px;
+    border-radius: 6px;
+    border-color: #3c4764;
     object-fit: contain;
     width: 100%;
   }
