--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   font-size: 16px;
 }
 
-
 .navMenu li {
   display: inline;
   margin: 10px;
@@ -87,12 +86,15 @@ body {
 
 /* Cards */
 
+.mainBodyContainer {
+  padding: 1em;
+}
+
 .projectCardsContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   text-decoration: none;
-  padding: 1em;
 }
 
 .card {
